2008-09-10  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37353
	* tree-call-cdce.c (cond_dead_built_in_calls): Remove.
	(shrink_wrap_conditional_dead_built_in_calls): Add calls argument, use
	calls instead of cond_dead_built_in_calls.
	(tree_call_cdce): Add cond_dead_built_in_calls automatic variable,
	initalize the vector only before adding first entry.  Use VEC_safe_push
	instead of VEC_quick_push.  Pass cond_dead_built_in_calls to
	shrink_wrap_conditional_dead_built_in_calls call.

2008-09-10  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/37385
	* tree-vect-transform.c (vect_create_data_ref_ptr): Add a new argument,
	and use it as a vector type if not NULL.
	(vectorizable_store): Call vect_create_data_ref_ptr with the type of 
	vectorized rhs.
	(vect_setup_realignment): Call vect_create_data_ref_ptr with additional
	argument.
	(vectorizable_load): Likewise.

2008-09-10  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.md (SWI32): New mode iterator.
	(jcc_fused_1, jcc_fused_2, jcc_fused_3, jcc_fused_4): Use it instead
	of SWI.

2008-09-09  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/37435
	* caller-save.c (insert_restore, insert_save): Check the mode by
	reg_save_code.

2008-09-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR other/37265
	* dwarf2asm.c (dw2_force_const_mem): Use unstripped symbol name for
	splay tree lookup.
	(dw2_output_indirect_constant_1): Use unstripped name in symbol
	reference.

2008-09-09  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi (ARM Options): Correct errors in discussion 
	of -mfloat-abi, -mhard-float, and -msoft-float.

2008-09-09  Jakub Jelinek  <jakub@redhat.com>
	    Jan Hubicka  <jh@suse.cz>

	PR middle-end/37356
	* tree-inline.c (copy_bb): Insert stmt into copy_basic_block before
	calling gimple_regimplify_operands on it.  Iterate over all newly
	added statements, not just the last one.
	(insert_init_stmt): Insert stmt into seq first, then call